@@ -1,4 +1,3 @@
-#
 # Copyright (c) 2013-2019 Made to Order Software Corp.
 #
 # https://snapwebsites.org/project/snaplogger
@@ -17,7 +16,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
-#
+
 
 ##
 ## snaplogger library
